--- a/package.json
+++ b/package.json
@@ -4,14 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "test": ""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "body-parser": "^1.13.2",
+    "colors": "^1.1.2", 
     "express": "^4.13.1",
+    "express-session": "^1.13.0",
+    "knex": "^0.10.0",
     "lodash": "^3.10.0",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "nodemon": "^1.9.1",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
+    "path": "^0.12.7",
+    "pg": "^4.5.6",
+    "request": "^2.72.0",
+    "uuid": "^2.0.1"
   }
 }
