--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon ./server/server.js",
     "test": ""
   },
   "author": "",
