--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "colors": "^1.1.2",
     "express": "^4.13.1",
     "express-session": "^1.13.0",
+    "handlebars": "^4.0.5",
     "knex": "^0.10.0",
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
