--- a/package.json
+++ b/package.json
@@ -27,5 +27,14 @@
     "pg-promise": "^5.0.5",
     "request": "^2.72.0",
     "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
