--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.13.2",
     "colors": "^1.1.2",
     "express": "^4.13.1",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
     "handlebars": "^4.0.5",
     "knex": "^0.10.0",
