--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
+    "grunt-contrib-cssmin": "^1.0.1",
     "handlebars": "^4.0.5",
     "knex": "^0.10.0",
     "lodash": "^3.10.0",
@@ -32,6 +33,8 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-handlebars": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
