--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server/index.js",
-    "test": ""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server/index.js"
   },
-  "author": "",
+  "author": "Richard Boothe",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.3.5",
