--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Interloper Site",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,6 +9,9 @@
   },
   "author": "Richard Boothe",
   "license": "ISC",
+  "engines": {
+    "node": "6.2.1"
+  },
   "dependencies": {
     "bluebird": "^3.3.5",
     "body-parser": "^1.13.2",
@@ -16,7 +19,6 @@
     "express": "^4.13.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
-    "grunt-contrib-cssmin": "^1.0.1",
     "handlebars": "^4.0.5",
     "knex": "^0.10.0",
     "lodash": "^3.10.0",
