--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Interloper Site",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./server/index.js"
+    "start": "nodemon ./server/index.js",
+    "postinstall": "grunt build"
   },
   "author": "Richard Boothe",
   "license": "ISC",
@@ -19,6 +19,16 @@
     "express": "^4.13.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
+    "grunt-cli": "^1.2.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-handlebars": "^1.0.0",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^1.0.0",
     "handlebars": "^4.0.5",
     "knex": "^0.10.0",
     "lodash": "^3.10.0",
