--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "bluebird": "^3.3.5",
     "body-parser": "^1.13.2",
     "colors": "^1.1.2",
-    "express": "^4.13.1",
+    "express": "4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
-    "grunt-cli": "^1.2.0",
     "grunt": "~0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-handlebars": "^1.0.0",
