--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Interloper Site",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server/index.js",
-    "postinstall": "grunt"
+    "postinstall": "grunt uglify",
+    "start": "node ./server/index.js"
   },
   "author": "Richard Boothe",
   "license": "ISC",
@@ -19,8 +19,8 @@
     "express": "4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
-    "grunt": "~0.4.5",
-    "grunt-cli": "^1.2.0",
+    "grunt": "0.4.5",
+    "grunt-cli": "1.2.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-handlebars": "^1.0.0",
