--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "node-api",
+  "name": "InterloperSite",
   "version": "1.0.0",
   "description": "Interloper Site",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "grunt uglify",
     "start": "nodemon ./server/index.js"
   },
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-assemble": "^0.4.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-handlebars": "^1.0.0",
