--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "postinstall": "grunt uglify",
     "start": "nodemon ./server/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/https://github.com/richardjboothe/interlopersite.git"
+  },
   "author": "Richard Boothe",
   "license": "ISC",
   "engines": {
@@ -20,16 +24,6 @@
     "express": "4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
-    "grunt": "0.4.5",
-    "grunt-cli": "1.2.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-handlebars": "^1.0.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^1.0.0",
     "handlebars": "^4.0.5",
     "knex": "^0.10.0",
     "lodash": "^3.10.0",
