--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
     "handlebars": "^4.0.5",
+    "jquery": "^3.1.0",
     "knex": "^0.10.0",
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
