--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "grunt uglify && npm update && npm install package-name",
+    "postinstall": "grunt && npm update && npm install package-name",
     "start": "nodemon ./server/index.js"
   },
   "repository": {
