--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Personal Site for Richard Boothe",
+  "url": "richardboothe.com",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,7 +17,7 @@
   "author": "Richard Boothe",
   "license": "ISC",
   "engines": {
-    "node": ">= 6.2.1"
+    "node": "~6.2.1"
   },
   "dependencies": {
     "bluebird": "^3.3.5",
