--- a/package.json
+++ b/package.json
@@ -26,6 +26,17 @@
     "express": "4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
+    "grunt": "~0.4.5",
+    "grunt-assemble": "^0.4.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-handlebars": "^1.0.0",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^1.0.0"
     "handlebars": "^4.0.5",
     "jquery": "^3.1.0",
     "knex": "^0.10.0",
@@ -39,17 +50,5 @@
     "pg-promise": "^5.0.5",
     "request": "^2.72.0",
     "uuid": "^2.0.1"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-assemble": "^0.4.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-handlebars": "^1.0.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^1.0.0"
   }
 }
