--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
     "handlebars": "^4.0.5",
     "jquery": "^3.1.0",
     "knex": "^0.10.0",
