--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "grunt uglify && npm update && npm install package-name",
-    "start": "nodemon ./server/index.js"
+    "start": "nodemon ./server/index.js",
+    "postinstall": "grunt uglify && npm update && npm install package-name"
   },
   "repository": {
     "type": "git",
